Creating objects as read from csv
reading from the csv's and then creating an object for each row of each csv with ['property_name':'value'] layout

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 <body>
    <form id="csvForm">
-      <input type="file" id="csvFile" accept=".csv" />
+      <input type="file" id="roomsCSV" accept=".csv" />
+      <input type="file" id="scheduleCSV" accept=".csv" />
       <br />
       <input type="submit" value="Submit" />
    </form>
