--- a/index.html
+++ b/index.html
@@ -5,6 +5,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+        }
+
+        .box {
+            border: 1px solid #000;
+            padding: 20px;
+            margin: 10px;
+            box-sizing: border-box;
+        }
+             /* Add some basic styling for the list items */
+         ul {
+             list-style-type: none;
+             padding: 0;
+             margin: 0;
+             display: flex; /* Make the container a flex container */
+         }
+
+        li {
+            margin-right: 10px; /* Add some spacing between list items */
+        }
+    </style>
 </head>
 
 <body>
@@ -14,6 +38,19 @@
    <br />
    <input type="submit" value="Submit" />
 </form>
+
+<div id="test-container" class="box">
+</div>
+
+<div id="result-rooms-container" class="box">
+</div>
+
+<div id="result-schedule-container" class="box">
+</div>
+
+<div id="result-match-container" class="box">
+</div>
+
 <script src=index.js></script>
 </body>
 
