LP solving the matching problems
Added function to check in a given array of UC's which ones conflict and returns the chains of conflicts (eg. A conflicts with B and B with C. D with no one -> conflicts = [A,B,C] and [D]). After creating the conflicts use linear programming to efficiently match rooms to UC's iterating over every chain.
Needs still some tweaks!
Feliz Ano Novo Zés!

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 <div id="result-match-container" class="box">
 </div>
 
+<script src="https://unpkg.com/javascript-lp-solver/prod/solver.js"></script>
 <script src=index.js></script>
 </body>
 
