Displaying in FullCalendar script
Só isso

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.min.js"></script>
     <style>
         body {
             margin: 0;
@@ -39,9 +43,6 @@
    <input type="submit" value="Submit" />
 </form>
 
-<div id="test-container" class="box">
-</div>
-
 <div id="result-rooms-container" class="box">
 </div>
 
@@ -49,6 +50,10 @@
 </div>
 
 <div id="result-match-container" class="box">
+</div>
+
+<div id="calendar">
+
 </div>
 
 <script src="https://unpkg.com/javascript-lp-solver/prod/solver.js"></script>
