Remy's are now cooking
remys = workerPool()

While(!plateInTable(ratatouille))
   remys.forEach(remy => cook(ratatouille.part))
eat(ratatouille, Vasco)

function cook(part){
  if(part.contains('onion'))
    add(ratatouille, onion)
  if(part.contains('garlic'))
    add(ratatouille, onion)
  if(part.contains('tomato'))
      add(ratatouille, tomato)
  if(part.contains('olive oil'))
      add(ratatouille, olive oil)
  if(part.contains('eggplant'))
      add(ratatouille, eggplant)
}

--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
 <script src=gui/gui.js></script>
 <script src=algorithms_workers/readerWorker.js></script>
 <script src=algorithms_workers/greedyWorker.js></script>
+<script src=algorithms_workers/remyCooker.js></script>
 <script src=algorithms_workers/ratatouille.js></script>
 <script src=utilities/linkedList.js></script>
 </body>
