HTML MAH BONITO
yah, also fixed a bug in the workers!

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/cb8bfa0780.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.min.css" />
     <link rel="stylesheet" href="gui/gui.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
@@ -25,17 +26,17 @@
 <body>
 <form id="csvForm">
     <div class="container">
-    <div class="drop-zone" id="dropZone1">
-        <span class="drop-zone__prompt">Drop <span style="color: #246BA9; font-weight: bold; font-size: larger;">rooms</span> file here or click to upload</span>
-        <input type="file" name="myFile1" id="roomsCSV" class="drop-zone__input" accept=".csv" onchange="showMenu('menu1', this)">
-    </div>
+        <div class="drop-zone" id="dropZone1">
+            <span class="drop-zone__prompt">Drop <span style="color: #246BA9; font-weight: bold; font-size: larger;">rooms</span> file here or click to upload</span>
+            <input type="file" name="myFile1" id="roomsCSV" class="drop-zone__input" accept=".csv" onchange="showMenu('menu1', this)">
+        </div>
 
 
 
-    <div class="drop-zone" id="dropZone2">
-        <span class="drop-zone__prompt">Drop <span style="color: #246BA9; font-weight: bold; font-size: larger;">classes</span> file here or click to upload</span>
-        <input type="file" name="myFile2" id="scheduleCSV" class="drop-zone__input" accept=".csv" onchange="showMenu('menu2', this)">
-    </div>
+        <div class="drop-zone" id="dropZone2">
+            <span class="drop-zone__prompt">Drop <span style="color: #246BA9; font-weight: bold; font-size: larger;">classes</span> file here or click to upload</span>
+            <input type="file" name="myFile2" id="scheduleCSV" class="drop-zone__input" accept=".csv" onchange="showMenu('menu2', this)">
+        </div>
 
 
         <div class="menu" id="menu1" style="display: none" >
@@ -77,47 +78,58 @@
         </div>
     </div>
 
-    <div id="separator--csv">
-        <label for="separatorInput">Enter CSV Separator:</label>
-        <input type="text" id="separatorInput" maxlength="1" placeholder="e.g. ,">
+    <div class="alg--choose">
+        <label>Choose the algorithms to use!</label>
+        <ul>
+            <li><input type="checkbox" id="check1" name="check1"> Greedy Capacity</li>
+            <li><input type="checkbox" id="check2" name="check2"> Ratatouille </li>
+            <li><input type="checkbox" id="check3" name="check3"> Option 3</li>
+        </ul>
     </div>
 
-    <div id="alg--choose">
-    <label>Check what you want:</label>
-    <ul>
-        <li><input type="checkbox" id="check1" name="check1"> Option 1</li>
-        <li><input type="checkbox" id="check2" name="check2"> Option 2</li>
-        <li><input type="checkbox" id="check3" name="check3"> Option 3</li>
-    </ul>
-    </div>
+    <div class="file--options">
+        <div class="option">
+            <label for="separatorInput">Enter CSV Separator:</label>
+            <select id="separatorInput" >
+                <option value=",">Comma (,)</option>
+                <option value=";">Semicolon (;)</option>
+                <option value="\t">Tab (\t)</option>
+                <option value="|">Pipe (|)</option>
+                <option value=":">Colon (:)</option>
+                <option value=" ">Space ( )</option>
+                <option value="~">Tilde (~)</option>
+            </select>
+        </div>
 
-    <div id="file--options">
-        <label for="timeFormatSelector">Choose the time format used in the files.
-            For example 14 hours 30 minutes and 59 seconds would be:</label>
-        <select id="timeFormatSelector">
-            <option value="HH:mm:ss">14:30:59</option>
-            <option value="HH-mm-ss">14-30-59</option>
-            <option value="H:mm:ss a">02:30:59 pm</option>
-            <option value="H:mm:ss a">02-30-59 pm</option>
-            <option value="h:mm:ss A">02:30:59 PM</option>
-            <option value="h:mm:ss A">02-30-59 PM</option>
-        <!-- Add more options as needed -->
-        </select>
-
-        <label for="dayFormatSelector">Choose the time format used in the files.
-            For example 31 january 2023 would be:</label>
-        <select id="dayFormatSelector">
-            <option value="DD-MM-YYYY">31-01-2023</option>
-            <option value="DD/MM/YYYY">31/01/2023</option>
-            <option value="MM/DD/YYYY">01-31-2023</option>
-            <option value="MM/DD/YYYY">01/31/2023</option>
-            <option value="YYYY/MM/DD">2023/01/31</option>
-            <option value="YYYY/MM/DD">2023-01-31</option>
-        </select>
+        <div class="option">
+            <label for="timeFormatSelector">Choose the time format used in the files.</label>
+            <select id="timeFormatSelector">
+                <option value="HH:mm:ss">14:30:59</option>
+                <option value="HH-mm-ss">14-30-59</option>
+                <option value="H:mm:ss a">02:30:59 pm</option>
+                <option value="H:mm:ss a">02-30-59 pm</option>
+                <option value="h:mm:ss A">02:30:59 PM</option>
+                <option value="h:mm:ss A">02-30-59 PM</option>
+                <!-- Add more options as needed -->
+            </select>
+        </div>
+        <div class="option">
+            <label for="dayFormatSelector">Choose the time format used in the files.</label>
+            <select id="dayFormatSelector">
+                <option value="DD-MM-YYYY">31-01-2023</option>
+                <option value="DD/MM/YYYY">31/01/2023</option>
+                <option value="MM/DD/YYYY">01-31-2023</option>
+                <option value="MM/DD/YYYY">01/31/2023</option>
+                <option value="YYYY/MM/DD">2023/01/31</option>
+                <option value="YYYY/MM/DD">2023-01-31</option>
+            </select>
+        </div>
     </div>
-    <div id="json--files">
-    <input type="file" id="fileInput" accept=".json" onchange="handleFile()">
-    <a id="downloadLink" style="display: none" download="ratices.json">Download JSON</a>
+    <div class="json--files">
+        <input type="file" id="fileInput" accept=".json" onchange="handleFile()">
+        <i class="fa-solid fa-file-csv"></i>
+
+        <a id="downloadLink" style="display: none" download="ratices.json">Download JSON</a>
     </div>
     <input type="submit" id="submitBtn" value="Submit Files">
 
@@ -125,19 +137,9 @@
 
 <div class="loader" id="loadingCircle" style="display: none"></div>
 
-<div id="result-rooms-container" style="display: none" class="box">
-    <span class="title"></span>
+<div id="display-area">
 </div>
 
-<div id="result-schedule-container" style="display: none" class="box">
-</div>
-
-<div id="result-match-container" style="display: none" class="box">
-</div>
-<div id="calendar-container" style="display: none" class="box">
-<div id="calendar" >
-</div>
-</div>
 
 
 
