Reverted Change of folder cause github-pages

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/cb8bfa0780.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.min.css" />
-    <link rel="stylesheet" href="../gui/gui.css" />
+    <link rel="stylesheet" href="gui/gui.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.min.js"></script>
@@ -55,9 +55,6 @@
             </select>
             <label for="menu13Selection">Room Building:</label>
             <select id="menu13Selection">
-            </select>
-            <label for="menu14Selection">Room Characteristics Last Column:</label>
-            <select id="menu14Selection">
             </select>
         </div>
 
@@ -199,15 +196,15 @@
 
 <script src="https://unpkg.com/javascript-lp-solver/prod/solver.js"></script>
 <script src=index.js></script>
-<script src=../algorithms_workers/aldrich.js></script>
-<script src=../algorithms_workers/dexter.js></script>
-<script src=../gui/gui.js></script>
-<script src=../algorithms_workers/readerWorker.js></script>
-<script src=../algorithms_workers/aldrichWorker.js></script>
-<script src=../algorithms_workers/dexterWorker.js></script>
-<script src=../algorithms_workers/remyCooker.js></script>
-<script src=../algorithms_workers/ratatouille.js></script>
-<script src=../utilities/linkedList.js></script>
+<script src=algorithms_workers/aldrich.js></script>
+<script src=algorithms_workers/dexter.js></script>
+<script src=gui/gui.js></script>
+<script src=algorithms_workers/readerWorker.js></script>
+<script src=algorithms_workers/aldrichWorker.js></script>
+<script src=algorithms_workers/dexterWorker.js></script>
+<script src=algorithms_workers/remyCooker.js></script>
+<script src=algorithms_workers/ratatouille.js></script>
+<script src=utilities/linkedList.js></script>
 </body>
 
 </html>
