--- a/index.html
+++ b/index.html
@@ -81,13 +81,109 @@
         </div>
     </div>
 
+    <div id="menus-algos" style="display:none;flex-direction: column; align-items: center">
+
     <div class="alg--choose">
         <label>Choose the algorithms to use!</label>
         <ul>
             <li><input type="checkbox" id="check1" name="check1"> Aldrich</li>
             <li><input type="checkbox" id="check2" name="check2"> Dexter </li>
             <li><input type="checkbox" id="check3" name="check3"> Ratatouille</li>
+            <li><input type="checkbox" id="check4" name="check4" onchange="toggleMenu()"> Linguini</li>
         </ul>
+    </div>
+
+    <div style="display: none" id="menu-linguini">
+        <div class="linguini-header">
+            <h1>Select the custom values for the linguini Algorithm</h1>
+        </div>
+        <div class="linguini-inputs">
+            <div class="linguini-option">
+                <label for="numberInput">Capacity waste</label>
+                <input type="number" id="numberInput" step="0.1" min="-2" max="2" value="0">
+
+            </div>
+
+            <div class="linguini-option">
+                <label for="numberInput2">Feature</label>
+                <input type="number" id="numberInput2" step="1" min="-100" max="100" value="0">
+
+            </div>
+
+            <div class="linguini-option">
+                <label for="linguiniSelection">Special Feature</label>
+                <select id="linguiniSelection"></select>
+            </div>
+
+            <div class="linguini-option">
+                <label for="numberInput3">its value</label>
+                <input type="number" id="numberInput3" step="1" min="-100" max="100" value="0">
+
+            </div>
+
+            <script>
+                document.getElementById('numberInput').addEventListener('wheel', function (e) {
+                    // Prevent scrolling to avoid unwanted value changes
+                    e.preventDefault();
+
+                    // Increment or decrement the value based on wheel direction
+                    if (e.deltaY > 0) {
+                        this.stepDown();
+                    } else {
+                        this.stepUp();
+                    }
+                });
+                document.getElementById('numberInput2').addEventListener('wheel', function (e) {
+                    // Prevent scrolling to avoid unwanted value changes
+                    e.preventDefault();
+
+                    // Increment or decrement the value based on wheel direction
+                    if (e.deltaY > 0) {
+                        this.stepDown();
+                    } else {
+                        this.stepUp();
+                    }
+                });
+                document.getElementById('numberInput3').addEventListener('wheel', function (e) {
+                    // Prevent scrolling to avoid unwanted value changes
+                    e.preventDefault();
+
+                    // Increment or decrement the value based on wheel direction
+                    if (e.deltaY > 0) {
+                        this.stepDown();
+                    } else {
+                        this.stepUp();
+                    }
+                });
+            </script>
+            <script>
+                function toggleMenu() {
+
+
+                    var checkbox = document.getElementById("check4");
+                    var menu = document.getElementById("menu-linguini");
+
+                    if(checkbox.checked){
+
+                        const linguiniSelection =document.getElementById('linguiniSelection')
+                        if (linguiniSelection.options.length === 0){
+                            const menu1Options = document.getElementById('menu1Selection').options
+                            linguiniSelection.innerHTML = '';
+
+                            for (var i = 0; i < menu1Options.length; i++) {
+                                var option = document.createElement('option');
+                                option.value = menu1Options[i].value;
+                                option.text = menu1Options[i].text;
+                                linguiniSelection.add(option);
+                            }
+                        }
+                    }
+                    // If checkbox is checked, show the menu; otherwise, hide it
+                    menu.style.display = checkbox.checked ? "flex" : "none";
+                }
+            </script>
+        </div>
+
     </div>
 
     <div class="file--options">
@@ -132,6 +228,7 @@
             <input id="maxRows" type="number">
         </div>
     </div>
+    </div>
 
     <input type="submit" id="submitBtn" value="Submit Files">
 
@@ -167,25 +264,25 @@
     <div class="github-container">
 
         <div class="github-profile">
-        <a href="https://github.com/Shrimpo22" target="_blank" class="github-button" id="button1">
-        </a>
+            <a href="https://github.com/Shrimpo22" target="_blank" class="github-button" id="button1">
+            </a>
             <div class="username">Vasco Araújo</div>
         </div>
         <div class="github-profile">
-        <a href="https://github.com/Pu4DinFL7" target="_blank" class="github-button" id="button2">
+            <a href="https://github.com/Pu4DinFL7" target="_blank" class="github-button" id="button2">
 
-        </a>
+            </a>
             <div class="username">Flávio Martins</div>
         </div>
         <div class="github-profile">
-        <a href="https://github.com/moonzn" target="_blank" class="github-button" id="button3">
-        </a>
+            <a href="https://github.com/moonzn" target="_blank" class="github-button" id="button3">
+            </a>
             <div class="username">Raúl Nascimento</div>
 
         </div>
         <div class="github-profile">
-        <a href="https://github.com/francismsc" target="_blank" class="github-button" id="button4">
-        </a>
+            <a href="https://github.com/francismsc" target="_blank" class="github-button" id="button4">
+            </a>
             <div class="username">Francisco Costa</div>
 
         </div>
@@ -198,6 +295,8 @@
 <script src=index.js></script>
 <script src=algorithms_workers/aldrich.js></script>
 <script src=algorithms_workers/dexter.js></script>
+<script src=algorithms_workers/linguini.js></script>
+<script src=algorithms_workers/linguiniWorker.js></script>
 <script src=gui/gui.js></script>
 <script src=algorithms_workers/readerWorker.js></script>
 <script src=algorithms_workers/aldrichWorker.js></script>
