--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/10.0.0/math.min.js"></script>
     <title>G14 Rooms to Events</title>
     <style>
 
@@ -81,7 +82,18 @@
         </div>
     </div>
 
+
+
     <div id="menus-algos" style="display:none;flex-direction: column; align-items: center">
+
+        <div id="criteriaContainer" >
+            <label>Add your own quality criterion if you want!</label>
+            <div class="inputContainer">
+                <input type="text" id="messageInput" placeholder="Inscritos no turno - Lotação > 0">
+                <span id="addMessageIcon" onclick="addMessage()"><i class="fa-solid fa-plus"></i></span>
+            </div>
+            <div id="messageList"></div>
+        </div>
 
     <div class="alg--choose">
         <label>Choose the algorithms to use!</label>
