Criteria Score Efficient

--- a/index.html
+++ b/index.html
@@ -311,6 +311,7 @@
 <script src=algorithms_workers/linguiniWorker.js></script>
 <script src=gui/gui.js></script>
 <script src=algorithms_workers/readerWorker.js></script>
+<script src=algorithms_workers/CriteriaWorker.js></script>
 <script src=algorithms_workers/aldrichWorker.js></script>
 <script src=algorithms_workers/dexterWorker.js></script>
 <script src=algorithms_workers/remyCooker.js></script>
