--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
                 <li><input type="checkbox" id="check2" name="check2"> Dexter </li>
                 <li><input type="checkbox" id="check3" name="check3"> Ratatouille</li>
                 <li><input type="checkbox" id="check4" name="check4" onchange="toggleMenu()"> Linguini</li>
+                <li><input type="checkbox" id="check5" name="check3"> Kowalski</li>
             </ul>
         </div>
 
@@ -316,6 +317,8 @@
 <script src=algorithms_workers/dexterWorker.js></script>
 <script src=algorithms_workers/remyCooker.js></script>
 <script src=algorithms_workers/ratatouille.js></script>
+<script src=algorithms_workers/kowalski.js></script>
+<script src=algorithms_workers/kawasaki.js></script>
 <script src=utilities/linkedList.js></script>
 </body>
 
