Added linear programming (Mimir)

--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
                 <li><input type="checkbox" id="check3" name="check3"> Ratatouille</li>
                 <li><input type="checkbox" id="check4" name="check4" onchange="toggleMenu()"> Linguini</li>
                 <li><input type="checkbox" id="check5" name="check3"> Kowalski</li>
+                <li><input type="checkbox" id="check6" name="check6"> Mimir </li>
+
             </ul>
         </div>
 
@@ -226,7 +228,7 @@
                 </select>
             </div>
             <div class="option">
-                <label for="dayFormatSelector">Choose the time format used in the files.</label>
+                <label for="dayFormatSelector">Choose the date format used in the files.</label>
                 <select id="dayFormatSelector">
                     <option value="DD-MM-YYYY">31-01-2023</option>
                     <option value="DD/MM/YYYY">31/01/2023</option>
@@ -319,6 +321,8 @@
 <script src=algorithms_workers/ratatouille.js></script>
 <script src=algorithms_workers/kowalski.js></script>
 <script src=algorithms_workers/kawasaki.js></script>
+<script src=algorithms_workers/mimir.js></script>
+<script src=algorithms_workers/mimirWorker.js></script>
 <script src=utilities/linkedList.js></script>
 </body>
 
